@@ -1,6 +1,6 @@
 ---
- docs/man/mupdf.1 |    3 +++
- 1 file changed, 3 insertions(+)
+ docs/man/mupdf.1 |   10 ++++++++++
+ 1 file changed, 10 insertions(+)
 
 --- a/docs/man/mupdf.1
 +++ b/docs/man/mupdf.1
@@ -14,3 +14,17 @@
  .B c
  Toggle between color and grayscale rendering.
  .TP
+@@ -133,6 +136,13 @@
+ Sending a \fBSIGHUP\fR signal to the mupdf process will also cause the viewed
+ file to be reloaded automatically, for use in e.g. build scripts.
+ 
++.SH ENVIRONMENT
++
++.TP
++.B BROWSER
++When \fBmupdf\fR opens a link it first uses BROWSER to browse the link
++and falls back to "xdg-open" if BROWSER is not defined.
++
+ .SH SEE ALSO
+ .BR mudraw (1),
+ .BR mutool (1).
