@@ -2,6 +2,8 @@ mupdf (1.3-2) unstable; urgency=medium
 
   * Fix CVE-2014-2013: Stack-based Buffer Overflow in
     xps_parse_color(). (Closes: #738857)
+  * Add description of key P to mupdf(1). (Closes: #736125)
+  * Add description of BROWSER env to mupdf(1). (Closes: #699684)
 
  -- Kan-Ru Chen (陳侃如) <koster@debian.org>  Sun, 09 Mar 2014 23:41:55 +0800
 
